--- a/ArdUNO_ENC_test/platformio.ini
+++ b/ArdUNO_ENC_test/platformio.ini
@@ -13,5 +13,4 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps = 
-	cnmat/OSC@0.0.0-alpha+sha.41b44981e3
-	jandrassy/EthernetENC@^2.0.1
+	adafruit/Ethernet2@^1.0.4
